[gd_scene load_steps=12 format=3 uid="uid://dsu2ylq3yelpp"]

[ext_resource type="Script" path="res://Scripts/mob.gd" id="1_2atfb"]
[ext_resource type="Texture2D" uid="uid://r747e54npjfm" path="res://Assets/bear.png" id="2_qh8lk"]
[ext_resource type="AudioStream" uid="uid://d2y2qefiof128" path="res://Sounds/350919__cabled_mess__hurt_c_05.wav" id="3_s1ol3"]
[ext_resource type="AudioStream" uid="uid://bkr404qkw2tv6" path="res://Sounds/168567__psychentist__ratdeath.mp3" id="4_in4be"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_agoux"]
radius = 34.0
height = 116.0

[sub_resource type="CircleShape2D" id="CircleShape2D_c8b66"]
radius = 335.436

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ak31r"]
radius = 35.0
height = 118.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_dmh16"]
playback_mode = 1
streams_count = 1
stream_0/stream = ExtResource("3_s1ol3")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_u80jx"]
streams_count = 1
stream_0/stream = ExtResource("4_in4be")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qapst"]
bg_color = Color(0, 0, 0, 0.564706)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
expand_margin_left = 4.0
expand_margin_top = 4.0
expand_margin_right = 4.0
expand_margin_bottom = 4.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_24i2e"]
bg_color = Color(0.941176, 0.623529, 0.839216, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="Mob" type="CharacterBody2D"]
motion_mode = 1
script = ExtResource("1_2atfb")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.308824, 0.333333)
texture = ExtResource("2_qh8lk")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -1)
shape = SubResource("CapsuleShape2D_agoux")

[node name="DetectionArea" type="Area2D" parent="."]
unique_name_in_owner = true

[node name="CollisionShape2D2" type="CollisionShape2D" parent="DetectionArea"]
position = Vector2(0, 4)
shape = SubResource("CircleShape2D_c8b66")

[node name="HitBox" type="Area2D" parent="."]
unique_name_in_owner = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource("CapsuleShape2D_ak31r")

[node name="HurtSound" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = SubResource("AudioStreamRandomizer_dmh16")
volume_db = 6.0

[node name="DieSound" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = SubResource("AudioStreamRandomizer_u80jx")
volume_db = 3.0
pitch_scale = 3.0

[node name="HealthBar" type="ProgressBar" parent="."]
unique_name_in_owner = true
offset_left = -50.0
offset_top = -93.0
offset_right = 57.0
offset_bottom = -85.0
theme_override_styles/background = SubResource("StyleBoxFlat_qapst")
theme_override_styles/fill = SubResource("StyleBoxFlat_24i2e")
value = 100.0
show_percentage = false

[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
[connection signal="body_entered" from="HitBox" to="." method="_on_hit_box_body_entered"]
